--- a/web8/index.html
+++ b/web8/index.html
@@ -779,7 +779,7 @@
         <div class="radial-bg"></div>
         <div class="hero-content fade-in">
             <h1 class="hero-title">$DOJE</h1>
-            <p class="hero-subtitle">THE FIRST DOGECOIN ETF LAUNCHING THIS WEEK</p>
+            <p class="hero-subtitle">THE FIRST DOGECOIN ETF TO EVER LAUNCH</p>
             <div class="hero-doge">
                 <img src="images/banner-image.png" alt="Doge ETF Mascot">
             </div>
@@ -834,25 +834,21 @@
             <div class="token-info">
                 <div class="token-label">TOTAL SUPPLY</div>
                 <div class="token-value">1,000,000,000</div>
-                <div class="token-description">Fixed supply with no inflation</div>
             </div>
 
             <div class="token-info">
                 <div class="token-label">BLOCKCHAIN</div>
                 <div class="token-value">ETH CHAIN</div>
-                <div class="token-description">Built on Ethereum for security</div>
             </div>
 
             <div class="token-info">
                 <div class="token-label">LIQUIDITY</div>
                 <div class="token-value">BURNED</div>
-                <div class="token-description">LP tokens permanently burned</div>
             </div>
 
             <div class="token-info">
                 <div class="token-label">OWNERSHIP</div>
                 <div class="token-value">RENOUNCED</div>
-                <div class="token-description">Contract ownership renounced</div>
             </div>
         </div>
     </section>
@@ -864,7 +860,7 @@
                 <img src="images/footer-logo.png" alt="Doge ETF Logo" class="footer-logo">
                 <div class="footer-text">
                     <div class="brand">$DOJE</div>
-                    <div class="tagline">THE FIRST DOGECOIN ETF<br>LAUNCHING THIS WEEK</div>
+                    <div class="tagline">THE FIRST DOGECOIN ETF<br>TO EVER LAUNCH</div>
                 </div>
             </div>
             
