--- a/web8/index.html
+++ b/web8/index.html
@@ -441,7 +441,7 @@
             border: 4px solid var(--navy-blue);
             border-radius: 20px;
             padding: 40px;
-            max-width: 500px;
+            max-width: 550px;
             position: relative;
             box-shadow: 0 15px 35px rgba(0,0,0,0.1);
             color: var(--navy-blue);
@@ -858,9 +858,9 @@
         <!-- NEW FLOATING ELEMENTS START -->
         <div class="floating-elements">
             <img src="images/dogebg.jpg" alt="">
-            <img src="images/etfbg.jpg" alt="">
             <img src="images/dogebg.jpg" alt="">
-            <img src="images/etfbg.jpg" alt="">
+            <img src="images/dogebg.jpg" alt="">
+            <img src="images/dogebg.jpg" alt="">
             <img src="images/dogebg.jpg" alt="">
             <img src="images/etfbg.jpg" alt="">
             <img src="images/dogebg.jpg" alt="">
@@ -870,7 +870,7 @@
         <div class="radial-bg"></div>
         <div class="hero-content fade-in">
             <h1 class="hero-title">$DOJE</h1>
-            <p class="hero-subtitle">THE FIRST DOGECOIN ETF TO EVER LAUNCH</p>
+            <p class="hero-subtitle">THE FIRST DOGE ETF</p>
             <div class="hero-doge">
                 <img src="images/banner-image.png" alt="Doge ETF Mascot">
             </div>
