--- a/web8/index.html
+++ b/web8/index.html
@@ -163,6 +163,78 @@
             flex-direction: column;
             overflow: hidden;
         }
+        
+        /* --- RESTORED FLOATING ANIMATION STYLES START --- */
+        .floating-elements {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+            z-index: 1;
+            pointer-events: none;
+        }
+
+        .floating-elements img {
+            position: absolute;
+            bottom: -150px; /* Start below the viewport */
+            opacity: 0; /* Start invisible */
+            animation: floatUp linear infinite;
+        }
+
+        @keyframes floatUp {
+            0% {
+                transform: translateY(0);
+                opacity: 0;
+            }
+            10%, 90% {
+                opacity: 0.15; /* Fade in and out at the edges */
+            }
+            100% {
+                transform: translateY(-120vh) rotate(360deg); /* Move up and off screen, with a gentle rotation */
+                opacity: 0;
+            }
+        }
+
+        /* Individual properties for each floating image */
+        .floating-elements img:nth-child(1) {
+            left: 10%;
+            width: 80px;
+            animation-duration: 25s;
+            animation-delay: 0s;
+        }
+        .floating-elements img:nth-child(2) {
+            left: 20%;
+            width: 40px;
+            animation-duration: 30s;
+            animation-delay: 5s;
+        }
+        .floating-elements img:nth-child(3) {
+            left: 35%;
+            width: 90px;
+            animation-duration: 22s;
+            animation-delay: 3s;
+        }
+        .floating-elements img:nth-child(4) {
+            left: 50%;
+            width: 50px;
+            animation-duration: 35s;
+            animation-delay: 10s;
+        }
+        .floating-elements img:nth-child(5) {
+            left: 65%;
+            width: 100px;
+            animation-duration: 20s;
+            animation-delay: 8s;
+        }
+        .floating-elements img:nth-child(6) {
+            left: 85%;
+            width: 60px;
+            animation-duration: 28s;
+            animation-delay: 1s;
+        }
+        /* --- RESTORED FLOATING ANIMATION STYLES END --- */
 
         .radial-bg {
             position: absolute;
@@ -201,7 +273,6 @@
             text-transform: uppercase;
         }
 
-        /* --- MODIFIED --- Floating animation removed */
         .hero-doge {
             width: clamp(200px, 40vw, 400px);
             height: clamp(200px, 40vw, 400px);
@@ -224,7 +295,6 @@
             filter: hue-rotate(220deg) saturate(1.5) brightness(0.7);
         }
 
-        /* --- MODIFIED --- Styles now target the img/gif */
         .hero-doge img {
             width: 100%;
             height: 100%;
@@ -779,12 +849,23 @@
 
         <!-- Home Section -->
         <section class="home-section" id="home">
+
+            <!-- RESTORED FLOATING ELEMENTS START -->
+            <div class="floating-elements">
+                <img src="images/dogebg.jpg" alt="">
+                <img src="images/dogebg.jpg" alt="">
+                <img src="images/dogebg.jpg" alt="">
+                <img src="images/dogebg.jpg" alt="">
+                <img src="images/dogebg.jpg" alt="">
+                <img src="images/dogebg.jpg" alt="">
+            </div>
+            <!-- RESTORED FLOATING ELEMENTS END -->
+
             <div class="radial-bg"></div>
             <div class="hero-content fade-in">
                 <h1 class="hero-title">$DOJE</h1>
                 <p class="hero-subtitle">THE FIRST DOGECOIN ETF TO EVER LAUNCH</p>
                 
-                <!-- --- MODIFIED --- Video replaced with stationary GIF -->
                 <div class="hero-doge">
                     <img src="images/herosection.gif" alt="Doge ETF Mascot">
                 </div>
